# hackthon-anytoken-protocol

./: .gitignore  Cargo.toml
contract/: Cargo.toml  README.md  build.sh
contract/.ink/abi_gen/: Cargo.toml
contract/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
src/: chain_spec.rs
ui/: README.md
ui/src/: App.js
